# slotted-egraphs

./: Cargo.toml  test.sh
slotted-sdql/: Cargo.toml  gen_log1.txt  gen_log2.txt  trace.sh
slotted-sdql/src/: main.rs  rewrite.rs
src/: types.rs
src/extract/: cost.rs  mod.rs
tests/: entry.rs
tests/lambda/: my_cost.rs
tests/sdql/: analysis.rs  mod.rs  my_cost.rs  rewrite.rs  tst.rs
tests/sdql/progs/: mmm_sum_v7_csc_csr_unfused_esat.sexp
