[package]
name = "slotted-egraphs"
version = "0.0.25"
edition = "2021"
description = "E-Graphs with name binding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/memoryleak47/slotted-egraphs/"

[features]
explanations = []
checks = []

[package.metadata.docs.rs]
features = ["explanations"]

[dependencies]
fnv = "1.0.7"
memory-stats = "1.0.0"
tracing = "0.1"

[dev-dependencies]
symbol_table = { version = "0.3", features = ["global"]}
rand = "0.8.5"

[profile.release]
debug = true
